--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Run GoReleaser
       uses: goreleaser/goreleaser-action@v5
-      if: startsWith(github.ref, 'refs/tags/')
+      # if: startsWith(github.ref, 'refs/tags/')
       with:
         version: latest
         args: release --clean
