--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,11 @@
 name: goreleaser
 
 on:
+  pull_request:
   push:
+    # run only against tags
     tags:
-      - '*'
+      - "*"
 
 permissions:
   contents: write
@@ -17,13 +19,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      -
-        name: Set up Go
+      - name: Set up Go
         uses: actions/setup-go@v4
+        with:
+          go-version: 1.21
       -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
-        if: startsWith(github.ref, 'refs/tags/')
         with:
           version: latest
           args: release --clean
