--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,17 +14,18 @@ jobs:
   goreleaser:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Set uo Clib build env
+        run: |
+          sudo apt-get install gcc-multilib # install headerfiles for duckDB cgo
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: 1.21
-      -
-        name: Run GoReleaser
+      - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
         with:
           version: latest
