--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,11 +1,3 @@
-# This is an example .goreleaser.yml file with some sensible defaults.
-# Make sure to check the documentation at https://goreleaser.com
-
-# The lines below are called `modelines`. See `:help modeline`
-# Feel free to remove those if you don't want/need to use them.
-# yaml-language-server: $schema=https://goreleaser.com/static/schema.json
-# vim: set ts=2 sw=2 tw=0 fo=cnqoj
-
 version: 1
 
 before:
@@ -16,14 +8,25 @@ before:
     - go mod tidy
 
 builds:
-  - env:
+  - id: darwin-amd64
+    binary: golang-cross
+    env:
       - CGO_ENABLED=1
     goos:
       # duckDB-go does not support windows
-      - linux
       - darwin
-
+  - id: linux-pi
+    binary: golang-cross
+    env:
+      - GCO_ENABLED=1
+    goos: 
+      - linux
+    
 archives:
+  - id: golang-cross
+    builds:
+      - darwin-amd64
+      - linux-armhf
   - format: tar.gz
     # this name template makes the OS and Arch compatible with the results of `uname`.
     name_template: >-
@@ -33,10 +36,6 @@ archives:
       {{- else if eq .Arch "386" }}i386
       {{- else }}{{ .Arch }}{{ end }}
       {{- if .Arm }}v{{ .Arm }}{{ end }}
-    # use zip for windows archives
-    format_overrides:
-      - goos: windows
-        format: zip
 
 changelog:
   sort: asc
