--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -8,25 +8,47 @@ before:
     - go mod tidy
 
 builds:
-  - id: darwin-amd64
+  - id: darwin-arm64
+    main: ./
     binary: golang-cross
-    env:
-      - CGO_ENABLED=1
     goos:
-      # duckDB-go does not support windows
       - darwin
-  - id: linux-pi
-    binary: golang-cross
+    goarch:
+      - arm64
     env:
-      - GCO_ENABLED=1
-    goos: 
+      - PKG_CONFIG_SYSROOT_DIR=/sysroot/macos/arm64
+      - PKG_CONFIG_PATH=/sysroot/macos/arm64/usr/local/lib/pkgconfig
+      - CC=o64-clang
+      - CXX=o64-clang++
+    flags:
+      - -mod=readonly
+    ldflags:
+      - -s -w -X main.version={{.Version}}
+  - id: linux-armhf
+    main: ./
+    binary: golang-cross
+    goos:
       - linux
-    
+    goarch:
+      - arm
+    goarm:
+      - 7
+    env:
+      - CC=arm-linux-gnueabihf-gcc
+      - CXX=arm-linux-gnueabihf-g++
+      - CGO_CFLAGS=--sysroot=/sysroot/linux/armhf
+      - CGO_LDFLAGS=--sysroot=/sysroot/linux/armhf
+      - PKG_CONFIG_SYSROOT_DIR=/sysroot/linux/armhf
+      - PKG_CONFIG_PATH=/sysroot/linux/armhf/opt/vc/lib/pkgconfig:/sysroot/linux/armhf/usr/lib/arm-linux-gnueabihf/pkgconfig:/sysroot/linux/armhf/usr/lib/pkgconfig:/sysroot/linux/armhf/usr/local/lib/pkgconfig
+    flags:
+      - -mod=readonly
+    ldflags:
+      - -s -w -X main.version={{.Version}}    
 archives:
   - id: golang-cross
     builds:
-      - darwin-amd64
-      - linux-armhf
+      - darwin
+      - linux-pi
   - format: tar.gz
     # this name template makes the OS and Arch compatible with the results of `uname`.
     name_template: >-
