add to pull requests

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,9 @@ on:
     # run only against tags
     tags:
       - v*
+permissions:
+   contents: write # needed to write releases
+
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
