--- a/.github/workflows/zig-release.yml
+++ b/.github/workflows/zig-release.yml
@@ -28,6 +28,6 @@ jobs:
         uses: goreleaser/goreleaser-action@v4          # run goreleaser
         with:
           version: latest
-          args: release --clean
+          args: release --clean --snapshot
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
