--- a/.github/workflows/zig-release.yml
+++ b/.github/workflows/zig-release.yml
@@ -30,4 +30,5 @@ jobs:
           version: latest
           args: release --clean --snapshot
         env:
+          CGO_ENABLED: 1
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
