--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -31,8 +31,6 @@ builds:
       - linux
     goarch:
       - arm
-    goarm:
-      - 7
     env:
       - CC=arm-linux-gnueabihf-gcc
       - CXX=arm-linux-gnueabihf-g++
@@ -48,7 +46,7 @@ archives:
   - id: golang-cross
     builds:
       - darwin
-      # - linux-pi
+      - linux-armhf
   - format: tar.gz
     # this name template makes the OS and Arch compatible with the results of `uname`.
     name_template: >-
