--- a/.github/workflows/zig-release.yml
+++ b/.github/workflows/zig-release.yml
@@ -15,8 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          apt-get update
-          gcc-arm-linux-gnueabihf
+          apt-get update \
+          apt getgcc-arm-linux-gnueabihf
       - uses: actions/checkout@v4
         # with:
           # fetch-depth: 0 # this is important, otherwise it won't checkout the full tree (i.e. no previous tags)
