--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -30,7 +30,9 @@ builds:
     goos:
       - linux
     goarch:
-      - arm
+      - arm64
+    goarm:
+      - 7
     env:
       - CC=arm-linux-gnueabihf-gcc
       - CXX=arm-linux-gnueabihf-g++
