--- a/.github/workflows/zig-release.yml
+++ b/.github/workflows/zig-release.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - run: |
           apt-get update \
-          apt getgcc-arm-linux-gnueabihf
+          apt-get gcc-arm-linux-gnueabihf
       - uses: actions/checkout@v4
         # with:
           # fetch-depth: 0 # this is important, otherwise it won't checkout the full tree (i.e. no previous tags)
