all: add goreleaser action
we want people to be able to download and run tool

Signed-off-by: soypete <petersonmiriah@gmail.com>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -10,14 +10,11 @@ version: 1
 
 before:
   hooks:
-    # You may remove this if you don't use go modules.
-    - go mod tidy
 
 builds:
   - env:
-      - CGO_ENABLED=1
     goos:
-      # duckDB-go does not support windows
+      - windows
       - linux
       - darwin
 
