all: update linter and fix linting issues
Signed-off-by: soypete <petersonmiriah@gmail.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,6 +21,12 @@ jobs:
     - name: Build
       run: go build -v ./...
 
+    - name: golangci-lint
+      uses: golangci/golangci-lint-action@v4 
+      with:
+        only-new-issues: true
+        skip-cache: true
+
     - name: Go Test
       run: go test ./... -v -cover -covermode=atomic
 
