--- a/.golangci-lint.yml
+++ b/.golangci-lint.yml
@@ -24,29 +24,28 @@ run:
   # Define the Go version limit.
   # Mainly related to generics support in go1.18.
   # Default: use Go version from the go.mod file, fallback on the env var `GOVERSION`, fallback on 1.17
-  go: '1.18' 
+  go: '1.22' 
   linters:
   # Enable specific linter
   # https://golangci-lint.run/usage/linters/#enabled-by-default-linters
   enable:
     - bodyclose
-    - deadcode
     - dogsled
     - errcheck
     - goconst
     - gocyclo
+    - godot
     - gofmt
+    - gosec
     - gosimple
     - govet
     - importas
-    - ineffassign
     - misspell
+    - perfsprint
+    - prealloc
     - revive
     - rowserrcheck
     - sqlclosecheck
     - staticcheck
-    - structcheck
     - stylecheck
-    - typecheck
     - unused
-    - varcheck
